--- a/index.html
+++ b/index.html
@@ -1,27 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
-
+    <link rel="stylesheet" href="style.css">
+    <title>Easier Layout</title>
 </head>
 
 <body>
     <div class="container">
     <!--Header-->
-        <div class="header">header</div>
+        <div class="header">
+            <p class="a1">header</p>
+        </div>
 
     <!--Navigation-->
-        <div class="nav">nav</div>
+        <div class="nav">
+            <p class="a2">nav</p>
+        </div>
 
     <!--Section-->
-        <div class="section">section</div>
+        <div class="section">
+            <p>section</p>
+            <div class="article">
+                <p>article</p>
+                <div class="headers">
+                    <p class="a4">h1,h2,h3</p>
+                </div>
+                <div class="p">
+                    <p class="a5">p</p>
+                </div>
+            </div>
+        </div>
 
     <!--Aside Section-->
-        <div class="aside">aside</div>
+        <div class="aside">
+            <p>aside</p>
+        </div>
 
     <!--Footer-->
-        <div class="aside">footer</div>
+        <div class="footer">
+            <p class="a3">footer</p>
+         </div>
+        </div> 
     </div>
 
-</body>
+    </body>
 </html>
